--- a/templates/dashboard/index.html.twig
+++ b/templates/dashboard/index.html.twig
@@ -1,19 +1,19 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Comparison | Translation{% endblock %}
+{% block title %}Dashboard{% endblock %}
 
 {% block content %}
 
     <div class="container-xxl flex-grow-1 container-p-y">
 
-        <h4 class="fw-bold py-3 mb-4"><span class="text-muted fw-light">Comparison /</span> Translation</h4>
+        <h4 class="fw-bold py-3 mb-4"><span class="text-muted fw-light">Dashboard</span></h4>
 
         <div class="col-md-12 col-lg-12">
             <div class="card text-center mb-3">
                 <div class="card-body">
-                    <h5 class="card-title">Translation</h5>
+                    <h5 class="card-title">Dashboard</h5>
                     <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-                    <a href="javascript:void(0)" class="btn btn-primary">Go somewhere</a>
+
                 </div>
             </div>
         </div>
