--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -22,7 +22,7 @@
     <meta name="description" content="" />
 
     <!-- Favicon -->
-    <link rel="icon" type="image/x-icon" href="../assets/img/favicon/favicon.ico" />
+    <link rel="icon" type="image/x-icon" href="{{ asset('img/favicon/favicon.ico') }}" />
 
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -92,7 +92,7 @@
 
                     <ul class="menu-sub">
                         <li class="menu-item">
-                            <a href="{{ path('app_translation') }}" class="menu-link">
+                            <a href="{{ path('app_comparison_translations') }}" class="menu-link">
                                 <div data-i18n="Without menu">Translations</div>
                             </a>
                         </li>
