--- a/templates/comparison/translations.html.twig
+++ b/templates/comparison/translations.html.twig
@@ -1,17 +1,17 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Comparison | Translation{% endblock %}
+{% block title %}Comparison | Translations{% endblock %}
 
 {% block content %}
 
     <div class="container-xxl flex-grow-1 container-p-y">
 
-        <h4 class="fw-bold py-3 mb-4"><span class="text-muted fw-light">Comparison /</span> Translation</h4>
+        <h4 class="fw-bold py-3 mb-4"><span class="text-muted fw-light">Comparison /</span> Translations</h4>
 
         <div class="col-md-12 col-lg-12">
             <div class="card text-center mb-3">
                 <div class="card-body">
-                    <h5 class="card-title">Translation</h5>
+                    <h5 class="card-title">Translations</h5>
                     <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
                     <a href="javascript:void(0)" class="btn btn-primary">Go somewhere</a>
                 </div>
