--- a/templates/dashboard/index.html.twig
+++ b/templates/dashboard/index.html.twig
@@ -12,7 +12,7 @@
             <div class="card text-center mb-3">
                 <div class="card-body">
                     <h5 class="card-title">Dashboard</h5>
-                    <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                    <p class="card-text"></p>
 
                 </div>
             </div>
