initial content page

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -97,7 +97,7 @@
                             </a>
                         </li>
                         <li class="menu-item">
-                            <a href="#" class="menu-link">
+                            <a href="{{ path('app_comparison_contents') }}" class="menu-link">
                                 <div data-i18n="Without navbar">Contents</div>
                             </a>
                         </li>
