--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -76,8 +76,8 @@
 
             <ul class="menu-inner py-1">
                 <!-- Dashboard -->
-                <li class="menu-item">
-                    <a href="{{ path('app_dashboard') }}" class="menu-link dashboard">
+                <li class="menu-item dashboard">
+                    <a href="{{ path('app_dashboard') }}" class="menu-link">
                         <i class="menu-icon tf-icons bx bx-home-circle"></i>
                         <div data-i18n="Analytics">Dashboard</div>
                     </a>
