--- a/templates/comparison/translations.html.twig
+++ b/templates/comparison/translations.html.twig
@@ -48,7 +48,7 @@
                                     <div class="col-sm-10">
                                         <input type="text" class="form-control"
                                                id="target_url"
-                                               value="https://rba.resource.crane.aero/web/en/api/property-file/ibe/en"
+                                               value="http://127.0.0.1/oyas/rba/web/en/api/property-file/ibe/en"
                                                placeholder="">
                                     </div>
                                 </div>
@@ -64,7 +64,31 @@
                 <div class="card-body">
                     <h5 class="card-title">Description</h5>
                     <p class="card-text">Compare translations between source and target URLs.</p>
-                    <a href="#" class="btn btn-primary" id="btn_start">Start</a>
+                    <a href="#" class="btn btn-primary" id="btn_start">Start Comparison
+                        <span id="spinner" class="spinner-border spinner-border-sm"
+                              style="color: white; display: none" role="status">
+                        <span class="visually-hidden">Loading...</span>
+                        </span>
+                    </a>
+                    <a href="#" class="btn btn-secondary" id="btn_clear">Clear</a>
+
+
+                </div>
+            </div>
+
+            <div class="card">
+                <h5 class="card-header">Table Basic</h5>
+                <div class="table-responsive text-nowrap">
+                    <table class="table">
+                        <thead>
+                        <tr>
+                            <th>Key</th>
+                            <th>Source URL</th>
+                            <th>Target URL</th>
+                        </tr>
+                        </thead>
+                        <tbody class="table-border-bottom-0" id="result_table"></tbody>
+                    </table>
                 </div>
             </div>
 
@@ -79,14 +103,19 @@
 
         // Start Translation key comparison
         let btnStart = $('#btn_start');
+        let btnClear = $('#btn_clear');
         let route = Routing.generate('app_comparison_compare_translations');
 
         let sourceURL = $('#source_url');
         let targetURL = $('#target_url');
 
+        let resultTable = $('#result_table');
+        let spinner = $('#spinner');
 
 
         btnStart.on('click', () => {
+
+            spinner.show();
 
             $.ajax({
                 url: route,
@@ -110,22 +139,45 @@
                     503: function (responseObject, textStatus, errorThrown) {
                         // Service Unavailable (503)
                         // This code will be executed if the server returns a 503 response
-                    },
-                    200: function (responseObject, textStatus, errorThrown) {
-                        //console.log(responseObject + textStatus + errorThrown)
-
-
                     }
                 }
             }).done(function (data) {
                 //response text
                 //console.log(data);
+
+                let html;
+                $.each(data, function (k, v) {
+
+                    if (v.type === 'missing_key') {
+                        html += '<tr class="table-success">';
+                    }
+
+                    if (v.type === 'changed_value') {
+                        html += '<tr class="table-warning">';
+                    }
+
+                    html += '<td><i class="fab fa-angular fa-lg text-danger me-3"></i> <strong>' + v.key + '</strong></td>' +
+                        '<td>' + v.source_value + '</td>' +
+                        '<td>' + v.target_value + '</td></tr>';
+
+                });
+
+                resultTable.html(html);
+
+
+
             }).fail(function (jqXHR, textStatus) {
                 console.log('Something went wrong: ' + textStatus);
+
             }).always(function (jqXHR, textStatus) {
                 //console.log('Ajax request was finished')
+                spinner.hide();
             });
 
+        });
+
+        btnClear.on('click', () => {
+           resultTable.empty();
         });
 
     </script>
